# toeroeoe

./: README.rst  pyproject.toml
tests/: test_töröö.py
töröö/: colors.xcf  cube.odg  generator.py  main.py  noise_gen.py  orthograph.py
